[package]
name = "libwildnix-macros"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Macros for libwildnix"
repository = "https://github.com/wildnix/libwildnix-macros"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"